// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/index renders with no props 1`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 2`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 3`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 4`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 5`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 6`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 7`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 8`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 9`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 10`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 11`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 12`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 13`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 14`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 15`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 16`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 17`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 18`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 19`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 20`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 21`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 22`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 23`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 24`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 25`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 26`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 27`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 28`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 29`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 30`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 31`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 32`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 33`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 34`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 35`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 36`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 37`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 38`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 39`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 40`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 41`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 42`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 43`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 44`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 45`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 46`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 47`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 48`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 49`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 50`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 51`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 52`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 53`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 54`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 55`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 56`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 57`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 58`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 59`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 60`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 61`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 62`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 63`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 64`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 65`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 66`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 67`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 68`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 69`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 70`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 71`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 72`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 73`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 74`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 75`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 76`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 77`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 78`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 79`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 80`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 81`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 82`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 83`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 84`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 85`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 86`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 87`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 88`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 89`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 90`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 91`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 92`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 93`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 94`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 95`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 96`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 97`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 98`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 99`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 100`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 101`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 102`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 103`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 104`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 105`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 106`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 107`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 108`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 109`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 110`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 111`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 112`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 113`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 114`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 115`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 116`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 117`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 118`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 119`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 120`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 121`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 122`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 123`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 124`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 125`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 126`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 127`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 128`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 129`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 130`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 131`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 132`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 133`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 134`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 135`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 136`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 137`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 138`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 139`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 140`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 141`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 142`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 143`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 144`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 145`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 146`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 147`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 148`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 149`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 150`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 151`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 152`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 153`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 154`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 155`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 156`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 157`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 158`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 159`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 160`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 161`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 162`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 163`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 164`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 165`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 166`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 167`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 168`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 169`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 170`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 171`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 172`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 173`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 174`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 175`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 176`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 177`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 178`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 179`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 180`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 181`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 182`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 183`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 184`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 185`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 186`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 187`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 188`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 189`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 190`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 191`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 192`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 193`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 194`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 195`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 196`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 197`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 198`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 199`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 200`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 201`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 202`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 203`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 204`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 205`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 206`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 207`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 208`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 209`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 210`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 211`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 212`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 213`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 214`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 215`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 216`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 217`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 218`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 219`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 220`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 221`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 222`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 223`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 224`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 225`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 226`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 227`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 228`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 229`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 230`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 231`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 232`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 233`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 234`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 235`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 236`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 237`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 238`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 239`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 240`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 241`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 242`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 243`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 244`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 245`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 246`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 247`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 248`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 249`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 250`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 251`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 252`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 253`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 254`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 255`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 256`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 257`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 258`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 259`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 260`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 261`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 262`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 263`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 264`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 265`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 266`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 267`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 268`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 269`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 270`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 271`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 272`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 273`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 274`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 275`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 276`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 277`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 278`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 279`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 280`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 281`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 282`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 283`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 284`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 285`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 286`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 287`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 288`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 289`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 290`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 291`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 292`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 293`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 294`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 295`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 296`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 297`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 298`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 299`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 300`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 301`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 302`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 303`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 304`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 305`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 306`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 307`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 308`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 309`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 310`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 311`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 312`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 313`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 314`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 315`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 316`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 317`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 318`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 319`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 320`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 321`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;

exports[`icons/index renders with no props 322`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="16px"
  width="16px"
/>
`;

exports[`icons/index renders with no props 323`] = `
.emotion-0 {
  fill: white;
}

.emotion-0 > * {
  fill: white;
}

<test-file-stub
  className="emotion-0"
  color="white"
  height="24px"
  width="24px"
/>
`;
